--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,6 +7,8 @@
         android:id="@+id/ll_infos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clickable="true"
+		android:focusable="true"
         android:background="#43ACBB"
         android:divider="@drawable/divider_line"
         android:dividerPadding="10dp"
@@ -18,7 +20,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:clickable="true"
             android:gravity="center"
             android:orientation="vertical"
             android:paddingBottom="5dp"
@@ -45,7 +46,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:clickable="true"
             android:gravity="center"
             android:orientation="vertical"
             android:paddingBottom="5dp"
@@ -72,7 +72,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:clickable="true"
             android:gravity="center"
             android:orientation="vertical"
             android:paddingBottom="5dp"
@@ -99,6 +98,8 @@
         android:id="@+id/ll_motto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clickable="true"
+		android:focusable="true"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:orientation="vertical"
