--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,15 +1,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="60dp" >
 
     <LinearLayout
         android:id="@+id/ll_infos"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:background="#43ACBB"
         android:clickable="true"
 		android:focusable="true"
-        android:background="#43ACBB"
         android:divider="@drawable/divider_line"
         android:dividerPadding="10dp"
         android:orientation="horizontal"
@@ -22,8 +22,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp" >
+          
+ 		 >
 
             <TextView
                 android:id="@+id/tv_day"
@@ -97,11 +97,11 @@
     <LinearLayout
         android:id="@+id/ll_motto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:background="#43ACBB"
+        android:gravity="center"
         android:clickable="true"
 		android:focusable="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
         android:orientation="vertical"
         android:visibility="gone" >
 
@@ -109,6 +109,9 @@
             android:id="@+id/tv_motto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:textColor="#fff"
             android:text="理想犹如天上的星星,我们犹如水手,虽不能到达天上,但是我们的航程可凭他指引  --舒尔茨" />
     </LinearLayout>
 
